{
  "version": 4,
  "terraform_version": "0.12.18",
  "serial": 5,
  "lineage": "fac7e13a-4baa-8f44-8cd5-67f450dbb4c3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:807624821827:security-group/sg-7efb5a1a",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-7efb5a1a",
            "ingress": [],
            "name": "default",
            "owner_id": "807624821827",
            "revoke_rules_on_delete": false,
            "tags": {
              "Description": "default VPC security group",
              "Name": "default"
            },
            "timeouts": null,
            "vpc_id": "vpc-4924e122"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "cluster-1",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d5d9d301c853a04a",
            "arn": "arn:aws:ec2:us-east-2:807624821827:instance/i-066562f51102c4ab7",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-066562f51102c4ab7",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-aws",
            "monitoring": false,
            "primary_network_interface_id": "eni-02d157390b8c06aa8",
            "private_dns": "ip-172-31-36-208.us-east-2.compute.internal",
            "private_ip": "172.31.36.208",
            "public_dns": "ec2-18-220-160-181.us-east-2.compute.amazonaws.com",
            "public_ip": "18.220.160.181",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-07f2f460c9f3fddcc",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "allow_ssh",
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-e78705ab",
            "tags": {
              "Name": "tf-cl1-0"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0b7bfda0b59211a61",
              "sg-7efb5a1a"
            ]
          },
          "dependencies": [
            "aws_default_security_group.default",
            "aws_security_group.allow_ssh"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d5d9d301c853a04a",
            "arn": "arn:aws:ec2:us-east-2:807624821827:instance/i-0cd98ddbad28cc9db",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0cd98ddbad28cc9db",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-aws",
            "monitoring": false,
            "primary_network_interface_id": "eni-05dc98a0e910d805f",
            "private_dns": "ip-172-31-33-23.us-east-2.compute.internal",
            "private_ip": "172.31.33.23",
            "public_dns": "ec2-18-222-149-83.us-east-2.compute.amazonaws.com",
            "public_ip": "18.222.149.83",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-06f96ed3e78d7e8b3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "allow_ssh",
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-e78705ab",
            "tags": {
              "Name": "tf-cl1-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0b7bfda0b59211a61",
              "sg-7efb5a1a"
            ]
          },
          "dependencies": [
            "aws_default_security_group.default",
            "aws_security_group.allow_ssh"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:807624821827:security-group/sg-0b7bfda0b59211a61",
            "description": "Allow SSH inbound traffic",
            "egress": [],
            "id": "sg-0b7bfda0b59211a61",
            "ingress": [
              {
                "cidr_blocks": [
                  "179.184.65.86/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh",
            "name_prefix": null,
            "owner_id": "807624821827",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-4924e122"
          }
        }
      ]
    }
  ]
}